--- a/view/customer/upCustomer.html
+++ b/view/customer/upCustomer.html
@@ -117,6 +117,22 @@
                         </div>
                     </div>
 
+                    <!--newsleter-->
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+
+                            <label class="switch">
+                                <input type="checkbox" class="switch-input" checked>
+                                <span class="switch-label" data-on="" data-off=""></span>
+                                <span class="switch-handle"></span>
+                            </label>
+                            Quero receber emails de promoções e novos produtos.
+                            <!--</div>-->
+
+                        </div>
+                    </div>
+                    <!--newsleter-->
+
                 </form>
 
             </div>
