--- a/view/customer/addCustomer.html
+++ b/view/customer/addCustomer.html
@@ -8,7 +8,7 @@
 
     <!--field name-->
     <div class="form-group">
-        <label class="col-sm-2 control-label">Nome</label>
+        <label class="col-sm-2 control-label">Nome<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
             <input class="form-control"
@@ -34,7 +34,7 @@
 
     <!--field email-->
     <div class="form-group">
-        <label class="col-sm-2 control-label">E-mail</label>
+        <label class="col-sm-2 control-label">E-mail<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
             <input class="form-control text-lowercase"
@@ -62,7 +62,7 @@
 
     <!--field password-->
     <div class="form-group">
-        <label class="col-sm-2 control-label">Senha</label>
+        <label class="col-sm-2 control-label">Senha<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
 
@@ -92,7 +92,7 @@
 
     <!--field re password-->
     <div class="form-group">
-        <label class="col-sm-2 control-label">Repita a senha</label>
+        <label class="col-sm-2 control-label">Repita a senha<span class="text-danger">*</span></label>
 
 
         <div class="col-xs-12 col-sm-6 col-md-6">
