--- a/view/user/addUser.html
+++ b/view/user/addUser.html
@@ -12,7 +12,7 @@
 
     <!--field name-->
     <div class="form-group">
-        <label class="col-sm-2 control-label">Nome</label>
+        <label class="col-sm-2 control-label">Nome<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
             <input class="form-control"
@@ -38,7 +38,7 @@
 
     <!--field email-->
     <div class="form-group">
-        <label class="col-sm-2 control-label">E-mail</label>
+        <label class="col-sm-2 control-label">E-mail<span class="text-danger">*</span></label>
 
 
         <div class="col-xs-12 col-sm-6 col-md-6">
@@ -68,7 +68,7 @@
     <!--field profile-->
     <div class="form-group" ng-init="getProfiles()">
 
-        <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label">Perfil</label>
+        <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label">Perfil<span class="text-danger">*</span></label>
 
         <div class="radio radio-inline radio-center" ng-repeat="prof in profiles">
             <label>
@@ -81,7 +81,7 @@
 
     <!--field password-->
     <div class="form-group">
-        <label class="col-sm-2 control-label">Senha</label>
+        <label class="col-sm-2 control-label">Senha<span class="text-danger">*</span></label>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
 
@@ -111,7 +111,7 @@
 
     <!--field re password-->
     <div class="form-group">
-        <label class="col-sm-2 control-label">Repita a senha</label>
+        <label class="col-sm-2 control-label">Repita a senha<span class="text-danger">*</span></label>
 
 
         <div class="col-xs-12 col-sm-6 col-md-6">
