--- a/view/customer/upCustomer.html
+++ b/view/customer/upCustomer.html
@@ -147,7 +147,7 @@
                     <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
 
-                            <button type="submit" class="btn btn-primary btn-sm" ng-click="upUser()" ng-Disabled="formPessoal.$invalid">
+                            <button type="submit" class="btn btn-primary btn-sm" ng-click="upCustomer()" ng-Disabled="formPessoal.$invalid">
                                 Salvar
                                 <i class="glyphicon glyphicon-save"></i>
                             </button>
