--- a/view/customer/upCustomer.html
+++ b/view/customer/upCustomer.html
@@ -183,29 +183,38 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Nova Senha<span class="text-danger">*</span></label>
 
-
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
-                                   placeholder="Informe a nova senha"
-                                   name="password"
-                                   type="password"
-                                   maxlength="20"
-                                   ng-maxlength="20"
-                                   ng-minlength="4"
-                                   ng-model="user.ds_password"
-                                   required/>
-                        </div>
+                            <div class="input-group">
 
-                        <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+                                <input class="form-control password"
+                                       placeholder="Informe a nova senha"
+                                       name="password"
+                                       type="password"
+                                       maxlength="20"
+                                       ng-maxlength="20"
+                                       ng-minlength="4"
+                                       ng-model="user.ds_password"
+                                       required/>
 
-                            <span class="text-danger" ng-show="formAcesso.password.$dirty && formAcesso.password.$invalid">
-                                <i class="glyphicon glyphicon-remove-sign"></i>
-                                <span ng-show="formAcesso.password.$error.required">Campo obrigatório</span>
-                                <span ng-show="formAcesso.password.$error.minlength">Mínimo de quatro caracteres</span>
-                                <span ng-show="formAcesso.password.$error.maxlength">Máximo de vinte caracteres</span>
-                            </span>
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" ng-click="showhidePass()">
+                                        <i id="switchPass" class="glyphicon glyphicon-eye-close"></i>
+                                    </button>
+                                </span>
 
+                            </div>
+
+                            <div class="help-block-input col-xs-12 col-sm-4 col-md-4">
+
+                                <span class="text-danger" ng-show="formAcesso.password.$dirty && formAcesso.password.$invalid">
+                                    <i class="glyphicon glyphicon-remove-sign"></i>
+                                    <span ng-show="formAcesso.password.$error.required">Campo obrigatório</span>
+                                    <span ng-show="formAcesso.password.$error.minlength">Mínimo de quatro caracteres</span>
+                                    <span ng-show="formAcesso.password.$error.maxlength">Máximo de vinte caracteres</span>
+                                </span>
+
+                            </div>
                         </div>
                     </div>
                     <!--field password-->
@@ -217,7 +226,7 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6">
 
-                            <input class="form-control"
+                            <input class="form-control password"
                                    placeholder="Repita a senha"
                                    name="re_password"
                                    type="password"
