--- a/app/view/general/main.html
+++ b/app/view/general/main.html
@@ -141,6 +141,6 @@
 </div>
 <!--linha-->
 
-<script src="js/lib/motio.min.js"></script>
-<script src="js/lib/banner_index.js"></script>
+<script src="app/component/motio.min.js"></script>
+<script src="app/component/banner_index.js"></script>
 
